# reconciler-for-ynab

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
reconciler_for_ynab/: _main.py
testing/: fixtures.py  seed.sql
tests/: _main_test.py
