[metadata]
name = reconciler_for_ynab
version = 1.0.0
description = Reconciler for YNAB - archived in favor of manager-for-ynab
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mxr/reconciler-for-ynab
author = Max R
author_email = mxr@users.noreply.github.com
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
keywords = ynab, budget, plan, reconcile, cli

[options]
packages = find:
python_requires = >=3.12

[options.entry_points]
console_scripts =
    reconciler-for-ynab = reconciler_for_ynab._main:main

[options.package_data]
reconciler_for_ynab =
    py.typed

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[tox:tox]
envlist = py,pypy3,pre-commit

[testenv]
deps = -rrequirements-dev.txt
commands =
    coverage erase
    coverage run -m pytest {posargs:tests}
    coverage report

[testenv:pre-commit]
skip_install = true
deps = pre-commit-uv
commands = pre-commit run --all-files --show-diff-on-failure
